--- a/src/app/components/design/design.component.html
+++ b/src/app/components/design/design.component.html
@@ -1,8 +1,8 @@
 <app-navbar></app-navbar>
 <div class="content slide data fadeInAnimated fastAnimated"> 
   <div class="row">
-    <div class="col-12 text-center">
-      <h4>Pedidos</h4>
+    <div class="col-6 offset-md-1 text-left">
+      <h4 class="title">Diseños</h4>
     </div>
   </div>
   
